Updating index.html with generic information on the meetups

--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
-<!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>DC44131.org</title>
-</head>
-<body>
-Hello world!
-</body>
+	<head>
+		<title>DC44131 - The Edinburgh DefCon Group</title>
+		<link rel=stylesheet href="main.css" />
+		<link rel="icon" href="favicon.ico" type="image/ico" />
+		<link rel="shortcut icon" href="favicon.ico" type="image/ico" />
+	</head>
+	<body>
+		<img src="images/dc44131.png" alt="DC44131 logo" class="logo"/>
+<!-- 		<h1>DC44131 - The Edinburgh DefCon Group</h1> -->
+		<ul class="menu">
+			<li><a href="index.html">[Home]</a></li>
+			<li><a href="about.html">[About Us]</a></li>
+			<li><a href="previous.html">[Previous Meets]</a>
+			<li><a href="credits.html">[Credits]</a></li>
+		</ul>
+
+		<h1>About</h1>
+		<div align="left">
+			<p>Based in Edinburgh and its surroundings, we aim to promote networking and information sharing between technology interested people.</p>
+			<p>Our main focus is Information Security. However, given our varied background and fields of interest, almost every technological aspect of modern life is up for discussion.</p>
+			<p>Everyone is welcome! Between seasoned professionals, proactive students, hardcore hobbyists, wise professors we should be able to discuss a wide array of useful and interesting ideas!</p>
+			<p>With an informal stance, meetings will take place at a pub. They should happen every other month, on the month's first Tuesday, unless stated otherwise.</p>
+			<p>Entrance is free and limited only by physical constraints (i.e. if the room is full). ;)</p>
+			<p>To contact us, feel free to drop an email to <a href="mailto:dc44131@dc44131.org">dc44131@dc44131.org</a>.<br/>Follow us on <a href="http://twitter.com/DC44131">@DC44131</a> and <a href="https://www.linkedin.com/groups?gid=4458972">our LinkedIn profile</a></p>
+		</div>
+	</body>
 </html>
