Adding additional files from the old website so that we have something remotely functional!

--- a/index.html
+++ b/index.html
@@ -15,14 +15,21 @@
 			<li><a href="credits.html">[Credits]</a></li>
 		</ul>
 
-		<h1>About</h1>
-		<div align="left">
-			<p>Based in Edinburgh and its surroundings, we aim to promote networking and information sharing between technology interested people.</p>
-			<p>Our main focus is Information Security. However, given our varied background and fields of interest, almost every technological aspect of modern life is up for discussion.</p>
-			<p>Everyone is welcome! Between seasoned professionals, proactive students, hardcore hobbyists, wise professors we should be able to discuss a wide array of useful and interesting ideas!</p>
-			<p>With an informal stance, meetings will take place at a pub. They should happen every other month, on the month's first Tuesday, unless stated otherwise.</p>
-			<p>Entrance is free and limited only by physical constraints (i.e. if the room is full). ;)</p>
-			<p>To contact us, feel free to drop an email to <a href="mailto:dc44131@dc44131.org">dc44131@dc44131.org</a>.<br/>Follow us on <a href="http://twitter.com/DC44131">@DC44131</a> and <a href="https://www.linkedin.com/groups?gid=4458972">our LinkedIn profile</a></p>
-		</div>
+		<h1>Home</h1>
+		<p>Greetings! This is the website of Edinburgh's <a href="https://www.defcon.org/html/defcon-groups/dc-groups.html">DefCon group</a>.</p>
+		<p>To contact us, drop an email to <a href="mailto:dc44131@dc44131.org">dc44131@dc44131.org</a>. <br/> Follow us on <a href="http://twitter.com/DC44131">@DC44131</a>.</p>
+
+
+		<h2>Next meeting</h2>
+		<article>
+			<header>Monday, 5th February 2024 - <a href="http://www.taylor-walker.co.uk/pub/beehive-inn-lothian/s9884/">The Beehive Inn</a> - Venue from 18:00 - Talks from 19:00</header>
+			<section>
+				<h4>TBA</h4>
+				<p>TBA</p>
+			</section>
+		</article>
+<!-- 		<section>
+			<h4></h4> <p></p>
+		</section> -->
 	</body>
 </html>
